# bazel-drives-sphinx

./: .gitignore  BUILD.bazel  MODULE.bazel  README.rst  pyproject.toml
cfg/: BUILD.bazel  config.bzl
cfg_bazel/: config.bzl
docs/components/: BUILD.bazel
docs/components/api/: BUILD.bazel  responses.rst
docs/components/auth/: BUILD.bazel  authentication.rst  authorization.rst  index.rst  intro.rst
docs/components/auth/trace/: authentication.rst
docs/components/schema_fail/: BUILD.bazel  index.rst
projects/acdc/: BUILD.bazel  conf.py  index.rst  schemas.json  ubproject.toml
projects/acdc/ac/: BUILD.bazel
projects/acdc/ac/docs/: BUILD.bazel  lots_of_ac.rst
projects/acdc/ac/src/: ac.c
projects/acdc/dc/docs/: BUILD.bazel  lots_of_dc.rst
projects/integration/: BUILD.bazel  conf.py  index.rst  ubproject.toml
projects/integration/overall/: BUILD.bazel
projects/integration/overall/docs/: BUILD.bazel  index.rst  int_reqs.rst  int_reqs_fail.rst
projects/integration/overall/docs/analytics/: index.rst
projects/integration/overall/src/: integration.c
projects/webapp/: BUILD.bazel  conf.py  index.rst  ubproject.toml
projects/webapp/api/docs/: BUILD.bazel  index.rst
projects/webapp/api/docs/endpoints/: index.rst
projects/webapp/auth/: codelinks.toml
projects/webapp/auth/docs/: BUILD.bazel  index.rst  intro.rst
projects/webapp/auth/docs/trace/: authentication.rst  authorization.rst
projects/webapp/auth/src/: some.c
projects/webapp/schema_fail/: BUILD.bazel  codelinks.toml
projects/webapp/schema_fail/docs/: BUILD.bazel  index.rst
projects/webapp/schema_fail/src/: some.c
tools/: workspace_status.sh
tools/generate_project/: BUILD.bazel  conf.py  generate.bzl  generate_project.py  index.rst.template
tools/sphinx/: BUILD.bazel  conf.py  index.rst  requirements.in  requirements.txt
tools/sphinx/_archive/dynamic_project/: generate.bzl
tools/sphinx/codelinks/: BUILD.bazel  analyse.bzl  analyse.py  needextend.bzl  needextend.py
tools/sphinx/dynamic_needextends/: generate.bzl  generator.py
tools/sphinx/dynamic_needimports/: BUILD.bazel  generate.bzl  generator.py
tools/sphinx/dynamic_project/: BUILD.bazel  generate.bzl  generator.py  index.rst.template
