# # Define the documentation generation target
# genrule(
#     name = "generate_docs",
#     srcs = [
#         ":all_rst_files",
#         "//docs:index_rst_template",
#         "//docs:conf_py_template",
#     ],
#     outs = [
#         "docs/index.rst",
#         "docs/conf.py",
#     ],
#     cmd = """
#     python tools/generate_docs.py $(SRCS) $(OUTS)
#     """,
# )
