load(":config.bzl", "generate_component_config")

components = [
    'api',
    'auth',
    'schema_fail',
]

# Whether to only include trace files
# config_setting(
#     name = "trace_only_true",
#     values = {"trace_only": "true"},
# )

# Generate all component-specific configuration
generate_component_config(
    name='generate_component_config',
    components=components
)

# Component allow flags
# for component in components:
#     config_setting(
#         name = "component_" + component,
#         values = {"component": component},
#     )

# config_setting(
#     name = "component_api",
#     values = {"component": "api"},
# )

# config_setting(
#     name = "component_auth",
#     values = {"component": "auth"},
# )

# config_setting(
#     name = "component_schema_fail",
#     values = {"component": "schema_fail"},
# )

# This matches when the user does NOT pass a component flag
# config_setting(
#     name = "no_component_selected",
#     define_values = {},  # No constraints — default matches if nothing overrides
# )

# component_all_files = select({
#     ":component_api": ["//docs/components/api:docs_all"],
#     ":component_auth": ["//docs/components/auth:docs_all"],
#     ":component_schema_fail": ["//docs/components/schema_fail:docs_all"],
#     ":no_component_selected": [
#         "//docs/components/api:docs_all",
#         "//docs/components/api:docs_all",
#         "//docs/components/schema_fail:docs_all"
#     ],
# })

# component_trace_files = select({
#     ":component_api": ["//docs/components/api:docs_trace"],
#     ":component_auth": ["//docs/components/auth:docs_trace"],
#     ":component_schema_fail": ["//docs/components/schema_fail:docs_trace"],
#     ":no_component_selected": [
#         "//docs/components/api:docs_trace",
#         "//docs/components/api:docs_trace",
#         "//docs/components/schema_fail:docs_trace"
#     ],
# })

# files = select({
#     ":trace_only_true": component_trace_files,
#     "//conditions:default": component_all_files,
# })

# Export files for use in other BUILD files
# exports_files(["files"], visibility = ["//tools/sphinx/dynamic_project:__pkg__"])
