filegroup(
    name = "all",
    srcs = [
        "//docs/components/api:docs",
        "//docs/components/auth:docs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "api",
    srcs = [
        "//docs/components/api:docs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "auth",
    srcs = [
        "//docs/components/auth:docs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "minimal",
    srcs = [
        "//docs/components/api:responses",  # Just one file from API
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "schema_fail",
    srcs = [
        "//docs/components/schema_fail:docs",
    ],
    visibility = ["//visibility:public"],
)
