load("//cfg_bazel:config.bzl", "generate_component_config", "generate_sphinx_docs")
load("//tools/sphinx/dynamic_project:generate.bzl", "generate_sphinx_project")

components = [
    'ac',
    'dc',
]

# Generate all component-specific configuration, will produce the :files target
generate_component_config(
    name='acdc',
    project='acdc',
    components=components
)

generate_sphinx_docs(
    name = "acdc_docs", 
    title = "Bazel Drives Sphinx ACDC",
)
