load("//cfg_bazel:config.bzl", "generate_sphinx_docs")

targets = {
    "all": [
        "//projects/acdc/ac/docs:docs_all",
        "//projects/acdc/dc/docs:docs_all",
    ],
    "trace": [
        "//projects/acdc/ac/docs:docs_trace",
        "//projects/acdc/dc/docs:docs_trace",
    ],
}

generate_sphinx_docs(
    name = "acdc_docs",
    targets = targets,
)
