load("//cfg_bazel:config.bzl", "generate_sphinx_docs")

targets = {
    "all": [
        "//projects/integration/overall/docs:docs_all",
    ],
    "trace": [
        "//projects/integration/overall/docs:docs_trace",
    ],
}

generate_sphinx_docs(
    name = "integration_docs",
    needs_json_labels = [
        "//projects/webapp:docs_needs_trace",
        "//projects/acdc:docs_needs_trace",
    ],
    needextends_labels = [
        "//projects/integration/overall:codelinks_needextend",
    ],
    targets = targets,
)
