load("//cfg_bazel:config.bzl", "generate_sphinx_docs")

targets = {
    "all": [
        "//projects/webapp/api/docs:docs_all",
        "//projects/webapp/auth/docs:docs_all",
        "//projects/webapp/schema_fail/docs:docs_all",
    ],
    "trace": [
        "//projects/webapp/api/docs:docs_trace",
        "//projects/webapp/auth/docs:docs_trace",
        "//projects/webapp/schema_fail/docs:docs_trace",
    ],
}

generate_sphinx_docs(
    name = "webapp_docs",
    targets = targets,
    needextends_labels = [
        "//projects/webapp/auth:codelinks_needextend",
        "//projects/webapp/schema_fail:codelinks_needextend",
    ],
)
