filegroup(
    name = "docs",
    srcs = [
        "index.rst",
        "intro.rst",
        ":trace"
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "trace",
    srcs = [
        "trace/authentication.rst",
        "trace/authorization.rst",
    ],
    visibility = ["//visibility:public"],
)
