filegroup(
    name = "docs_all",
    srcs = [
        ":docs_trace",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "docs_trace",
    srcs = [
        "index.rst",
        "int_reqs.rst",
        "analytics/index.rst",
        # 'int_reqs_fail.rst'
    ],
    visibility = ["//visibility:public"],
)
