filegroup(
    name = "docs_all",
    srcs = [
        ":docs_trace",
        "index.rst",
        "intro.rst",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "docs_trace",
    srcs = [
        "trace/authentication.rst",
        "trace/authorization.rst",
    ],
    visibility = ["//visibility:public"],
)
