filegroup(
    name = "docs_all",
    srcs = [
        ":docs_trace",
        "intro.rst",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "docs_trace",
    srcs = [
        "index.rst",
        "trace/authentication.rst",
        "trace/authorization.rst",
    ],
    visibility = ["//visibility:public"],
)
