filegroup(
    name = "docs_all",
    srcs = [
        "intro.rst",
        ":docs_trace",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "docs_trace",
    srcs = [
        "index.rst",
        "trace/authentication.rst",
        "trace/authorization.rst",
        "codelinks/docs/needextend.txt",
    ],
    visibility = ["//visibility:public"],
)
